<resources>
    <!-- Misc -->
    <string name="submit">Submit</string>
    <string name="enable">Enable</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="label">Label</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>

    <!--Titles-->
    <string name="app_name">Vehicle Mate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_vehicle_info">Vehicle Information</string>
    <string name="title_new_vehicle">New Vehicle</string>
    <string name="title_activity_vehicle_trip">Trips</string>
    <string name="title_activity_vehicle_notes">Notes</string>
    <string name="title_activity_vehicle_graphs">Graphs</string>
    <string name="title_activity_vehicle_overview">Vehicle</string>
    <string name="title_activity_vehicle_outgoings">Outgoings</string>

    <!--Keys-->
    <string name="preference_file_key_vehicles">songer.michael.vehiclemate.vehicles</string>

    <!-- New Vehicle -->
    <string name="action_settings">Settings</string>
    <string name="add_new_vehicle">Add Vehicle</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_name">Vehicle Name</string>
    <!--
    <string name="vehicle_ins_date">Vehicle Insurance Date</string>
    <string name="vehicle_ins_cost">Vehicle Insurance Cost</string>
    <string name="vehicle_mot_date">Vehicle MOT Date</string>
    <string name="vehicle_mot_cost">Vehicle MOT Cost</string>
    -->
    <string name="vehicle_tank_battery_size">Vehicle Tank/Battery Size</string>
    <string name="vehicle_electric">Uses Electric</string>
    <string name="vehicle_fuel">Uses Fuel</string>

    <!-- Vehicle Trip -->
    <string name="hint_distance">Distance</string>
    <string name="hint_fuel_efficiency">Fuel Efficiency</string>
    <string name="hint_fuel_cost">Fuel Cost</string>
    <string name="hint_total_cost">Total Cost:</string>
    <string name="trip_save">Save Trip</string>
    <string name="plot_route">Plot route</string>
    <string name="calculate">Calculate Cost</string>
    <string name="trip_previous">Previous Trips</string>

    <!-- Graphs -->
    <string name="outgoing_chart">Outgoings Chart</string>
    <string name="previous_trips_chart">Previous Trips Chart</string>

    <!-- Notifications -->
    <string name="add_notification">New Notification</string>

    <!-- Notes -->
    <string name="add_note">Add Note</string>
    <string name="note_hint">Note information</string>

    <!-- Outgoings -->
    <string name="add_outgoing">Add New Cost</string>
    <string name="outgoing_info">Info</string>
    <string name="outgoing_cost">Cost</string>

    <!-- Settings -->
    <string name="units_title">Units</string>
    <string name="imperial_metric">Imperial/Metric</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!--Messages Preferences-->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TomTom-->
    <string name="geocode_no_results">No geocoder results. Choose different location and try again.</string>
    <string name="api_response_error">API response error: \'%1$s\'.</string>

</resources>