<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_name_vehicle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".VehicleOverviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_vehicle_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_margin="@dimen/def_margin"/>

        <ImageView
            android:id="@+id/image_view_graphs_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_margin="@dimen/def_margin"/>

        <Button
            android:id="@+id/button_graphs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/title_activity_vehicle_graphs"/>

        <Button
            android:id="@+id/button_outgoings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/title_activity_vehicle_outgoings"/>

        <Button
            android:id="@+id/button_trips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/title_activity_vehicle_trip"/>

        <Button
            android:id="@+id/button_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/title_activity_vehicle_notes"/>

        <Button
            android:id="@+id/button_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/title_activity_notifications"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/delete"/>
    </LinearLayout>
</ScrollView>