<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_Notifications"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".NotificationsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear_layout_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_new_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_notification"/>
            <LinearLayout
                android:id="@+id/linear_layout_notifications_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_layout_new_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <!-- TITLE DATE -->
            <EditText
                android:id="@+id/edit_text_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:gravity="center_horizontal"
                android:hint="@string/label"/>
            <EditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/date"/>
            <EditText
                android:id="@+id/edit_text_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/time"/>
            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
