<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview_vehicle_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".VehicleTripActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Main content -->
        <TableLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <Button
                    android:id="@+id/button_plot_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:layout_weight="1"
                    android:text="@string/plot_route" />
            </TableRow>
            <TableRow>
                <EditText android:id="@+id/edit_text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:layout_weight="1"
                    android:inputType="datetime"
                    android:gravity="center_horizontal"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edit_text_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/hint_distance"
                    android:inputType="numberDecimal"
                    android:gravity="center_horizontal"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/text_view_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edit_text_efficiency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/hint_fuel_efficiency"
                    android:inputType="numberDecimal"
                    android:gravity="center_horizontal"
                    android:layout_weight="3"
                    />
                <TextView
                    android:id="@+id/text_view_efficiency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/edit_text_fuel_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/hint_fuel_cost"
                    android:inputType="numberDecimal"
                    android:gravity="center_horizontal"
                    android:layout_weight="3"/>
                <TextView
                    android:id="@+id/text_view_fuel_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/text_view_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:text="@string/hint_total_cost"
                    android:gravity="center_horizontal"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/button_calculate_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:layout_margin="@dimen/def_margin"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/button_save_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_save"
                    android:layout_margin="@dimen/def_margin"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/button_previous_trips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_previous"
                    android:layout_margin="@dimen/def_margin"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
        <!-- Map Content -->
        <RelativeLayout
            android:id="@+id/map_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <fragment
                android:id="@+id/map_fragment"
                android:name="com.tomtom.online.sdk.map.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <!-- Previous Trips -->
        <LinearLayout
            android:id="@+id/previous_trips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
