<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".VehicleOutgoingsActivity">
    <!-- Overall holder -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Main page -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_layout_outgoings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_new_outgoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:text="@string/add_outgoing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/edit_text_search"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".6"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"
                app:layout_constraintHorizontal_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/search"
                app:layout_constraintTop_toBottomOf="@+id/button_new_outgoing"
                app:layout_constraintEnd_toStartOf="@+id/button_search"
                app:layout_constraintStart_toStartOf="parent"
                />
            <Button
                android:id="@+id/button_search"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintWidth_percent=".1"
                android:layout_margin="@dimen/def_margin"
                app:layout_constraintTop_toBottomOf="@id/button_new_outgoing"
                app:layout_constraintStart_toEndOf="@id/edit_text_search"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/search"
                />
            <!-- Previous Outgoings -->
            <LinearLayout
                android:id="@+id/linear_layout_outgoing_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- New Outgoing -->
        <LinearLayout
            android:id="@+id/linear_layout_new_outgoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <EditText
                android:id="@+id/edit_text_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:gravity="center_horizontal"
                android:hint="@string/outgoing_info"
                android:inputType="text"/>
            <EditText
                android:id="@+id/edit_text_outgoing_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:gravity="center_horizontal"
                android:hint="@string/outgoing_cost"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:gravity="center_horizontal"
                android:hint="@string/date"
                android:inputType="datetime"/>
            <Button
                android:id="@+id/button_outgoing_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
