<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_name_vehicle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".NewVehicleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!--
        Type
        Model
        Name
        Insurance Date
        Insurance Cost
        MOT Date
        MOT Cost
        Tank size
        -->
        <ImageView
            android:id="@+id/image_view_vehicle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintHeight_max="300dp"
            app:layout_constraintWidth_max="300dp"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </ImageView>
        <Button
            android:id="@+id/button_vehicle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/image_view_vehicle_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/vehicle_image">
        </Button>

        <EditText
            android:id="@+id/edit_text_vehicle_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/button_vehicle_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:hint="@string/vehicle_type"
            android:gravity="center"
            >
        </EditText>
        <EditText
            android:id="@+id/edit_text_vehicle_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:hint="@string/vehicle_model"
            android:gravity="center"
            >
        </EditText>
        <EditText
            android:id="@+id/edit_text_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_model"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:hint="@string/vehicle_name"
            android:gravity="center"
            >
        </EditText>
        <!--
        <EditText
            android:id="@+id/edit_text_vehicle_ins_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/vehicle_ins_date"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_vehicle_ins_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_ins_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberDecimal"
            android:hint="@string/vehicle_ins_cost"
            android:gravity="center"
            >
        </EditText>
        <EditText
            android:id="@+id/edit_text_vehicle_mot_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_ins_cost"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/vehicle_mot_date"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_vehicle_mot_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_mot_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberDecimal"
            android:hint="@string/vehicle_mot_cost"
            android:gravity="center"
            >
        </EditText>
        -->
        <EditText
            android:id="@+id/edit_text_vehicle_tank_Battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberDecimal"
            android:hint="@string/vehicle_tank_battery_size"
            android:gravity="center"
            >
        </EditText>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_tank_Battery"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:checkedButton="@id/radio_button_fossil">
            <RadioButton
                android:id="@+id/radio_button_electric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_electric"
                android:onClick="radioButtonClicked"
                />
            <RadioButton
                android:id="@+id/radio_button_fossil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_fuel"
                android:onClick="radioButtonClicked"
                />
        </RadioGroup>

        <Button
            android:id="@+id/button_submit_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/submit"
            android:gravity="center"
            >
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>