<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".VehicleNotesActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear_layout_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_note"/>
            <LinearLayout
                android:id="@+id/linear_layout_note_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_layout_new_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <EditText
                android:id="@+id/edit_text_note_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:gravity="center_horizontal"
                android:hint="@string/note_hint"
                android:inputType="textMultiLine"/>
            <Button
                android:id="@+id/button_note_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="@dimen/def_margin"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
